--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts-core-1.3.10.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts-taglib-1.3.10.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/struts-tiles-1.3.10.jar"/>
+	<classpathentry kind="lib" path="F:/sna/mysql-connector-java-8.0.11.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
