--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,6 +10,7 @@
             <param-name>config</param-name>
             <param-value>/WEB-INF/struts-config.xml</param-value>
         </init-param>
+       
         <init-param>
             <param-name>debug</param-name>
             <param-value>2</param-value>
@@ -18,7 +19,7 @@
             <param-name>detail</param-name>
             <param-value>2</param-value>
         </init-param>
-        <load-on-startup>2</load-on-startup>
+         <load-on-startup>1</load-on-startup>
         </servlet>
     <servlet-mapping>
         <servlet-name>action</servlet-name>
@@ -53,5 +54,46 @@
             <taglib-uri>/WEB-INF/struts-tiles.tld</taglib-uri>
             <taglib-location>/WEB-INF/struts-tiles.tld</taglib-location>
         </taglib>
+        
+        <taglib>
+      <taglib-uri>
+	  http://struts.apache.org/tags-bean
+     </taglib-uri>
+     <taglib-location>
+	  /WEB-INF/struts-bean.tld
+     </taglib-location>
+ </taglib>
+ <taglib>
+     <taglib-uri>
+	  http://struts.apache.org/tags-html
+     </taglib-uri>
+     <taglib-location>
+	  /WEB-INF/struts-html.tld
+     </taglib-location>
+</taglib>
+<taglib>
+     <taglib-uri>
+	  http://struts.apache.org/tags-logic
+     </taglib-uri>
+     <taglib-location>
+	  /WEB-INF/struts-logic.tld
+     </taglib-location>
+</taglib>
+<taglib>
+     <taglib-uri>
+	  http://struts.apache.org/tags-tiles
+     </taglib-uri>
+     <taglib-location>
+	  /WEB-INF/struts-tiles.tld
+     </taglib-location>
+</taglib>
+<taglib>
+     <taglib-uri>
+	  http://struts.apache.org/tags-nested
+     </taglib-uri>
+     <taglib-location>
+	  /WEB-INF/struts-nested.tld
+     </taglib-location>
+</taglib>
         </jsp-config>
     </web-app>
