--- a/src/com/capgemini/eLibrary/ApplicationResource.properties
+++ b/src/com/capgemini/eLibrary/ApplicationResource.properties
@@ -8,3 +8,6 @@ error.bookname.invalid = Invalid
 error.author.required = Author is required
 error.author.invalid = Invalid
 error.quantity.invalid = Invalid
+error.password.mismatch = Passwords do not match
+error.phoneNo.wrongFormat = Phone number should consist of 10 digits.
+error.designation.required = Designation is required.
