--- a/src/com/capgemini/eLibrary/ApplicationResource.properties
+++ b/src/com/capgemini/eLibrary/ApplicationResource.properties
@@ -6,4 +6,5 @@ error.bookname.required = Book Name is required
 error.author.required = Author is required
 error.password.mismatch = Passwords do not match
 error.phoneNo.wrongFormat = Phone number should consist of 10 digits.
-error.designation.required = Designation is required.
+error.designation.required = Designation is required. 
+error.bookId.invalid = Entered book id does not exists.
